prompt/v3.3.1/main_agent.md
# Main Agent — v3.3.1 Setup Prompt (Agent-Agnostic Orchestrator)

> Paste prompt ini ke agent yang kamu pakai (Claude Code, Codex, Kimi, dll).
> Agent menulis config + skill files ke direktori agent terdeteksi.
> Main agent = orchestrator + user interface + direct executor.

---

## DESIGN NOTES (v3.3.1)

**Arsitektur:**
- `main_agent` = agent ini (agent-agnostic). Orchestrate, synthesize, execute langsung.
- `second_agent` = OpenCode, read-only evidence. Bukan final answer.
- **1-call interface**: main_agent panggil `.workflow/run.<ps1|sh> <command> "<task>"` → blocking → JSON `{ok, content, meta, digest}`. Tak ada karang command manual, tak ada check.py polling, tak ada resolusi session.
- Session lifecycle via SessionStart hook (Claude Code): `startup`/`clear`/`compact` → thread BARU; `resume` → LANJUT. Lihat STEP 5b.

**Perubahan v3.3.1 (tercermin di kode):**
- `commands.verify_mode` (`delegated` | `syntax`, default `delegated`) — `syntax` bikin `/.verify` jadi check parse lokal atas file berubah, nol test berat, nol delegated call `[core/quick_verify.py]`. `commands.auto_verify_after_execute` (bool, default `false`) memisahkan **kapan** verify jalan dari **sedalam apa** — prompt-only, `/.execute` nol jalur Python.
- **Kontrak verify severity + origin + scope_relation**: blocking ditentukan kombinasi tiga tag, bukan severity saja. Section `escalations` baru — critical/high yang tak memblokir tapi wajib dilihat user. Sebelumnya role `verification` nol `[OUTPUT_FORMAT]`.
- **Config migration additive** + rewrite key pensiun: key baru di-backfill ke config lama saat `load_workspace_state` (nilai user menang); `autoverify` lama dipetakan ke `verify_mode` lalu dibuang.
- **Fact store anti-self-reinforcement**: `_recurrence_counts()` mengecualikan sesi berjalan. Log sesi ditulis sebelum ingest, jadi fakta yang cuma di-echo dari `[KNOWN_FACTS]` tak lagi menaikkan hitungannya sendiri.
- **Fact store dedup berpagar**: collapse hanya bila file sama + category sama + anchor sama + polaritas negasi sama + Jaccard ≥ 0.5 dgn kedua klaim ≥ 6 kata. Kedekatan baris HANYA untuk trim saat baca, tak pernah untuk menghapus record.
- Tuning: `policies.fact_relevant_limit` = 3 (dulu 8). `fact_recurrence_threshold` tetap 5.
- `default_commands()`/`default_policies()` menandai mana key yang dibaca runtime dan mana yang prompt-only — 8 dari 11 key inert di Python.

**Perubahan kunci vs v3.2.1 (tercermin di kode):**
- `.workflow/` **self-contained**: `init` copy `opencode.json` + simpan path absolut `main.py`/`check.py` di `config.json` + generate `run.ps1`/`run.sh`/`inspect.*`. `$AGENT_PATH` cuma fallback.
- **1-call `await`** ganti dance `main.py`→`check.py`. Poll-timeout 0 (nunggu selesai) + reaper anti-deadlock.
- **Structured errors**: tiap gagal = `{error_type, next_action}`. Tak pernah output kosong-diam.
- **Digest code-side**: hasil bawa `digest` siap-relay. Main_agent relay digest, buka `content` bila perlu — **bukan** rebuild 11-field.
- Session: **satu otoritas** = hook `MAIN_SESSION_ID`. Tak rekonsiliasi 3-sumber.
- opencode.json: `role` diturunkan dari command di kode; route `execute` dibuang (domain main_agent).

**Command split:**
```
LOCAL (main_agent langsung):    /.execute -y /.init /.refactor /.commit /.review /.compress /.memory /.caveman /.local /.help
DELEGATED (1-call run script):  /.explore /.plan /.analyze /.verify /.sweep /.doctor
```

---

## STEP 0 — Deteksi agent & tentukan path

Cek berurutan, stop di sinyal valid pertama.

| # | Sinyal | Agent | AGENT_DIR | CONFIG_FILE |
|---|--------|-------|-----------|-------------|
| 1 | `~/.claude/` | Claude Code | `~/.claude/` | `CLAUDE.md` |
| 2 | `~/.codex/` / `CODEX_*` | Codex | `~/.codex/` | `AGENTS.md` |
| 3 | `~/.cursor/` | Cursor | `~/.cursor/` | `rules/workflow.md` |
| 4 | `~/.windsurf/` | Windsurf | `~/.windsurf/` | `rules/workflow.md` |
| 5 | `~/.gemini/` | Gemini CLI | `~/.gemini/` | `GEMINI.md` |
| 6 | `~/.github-copilot/` | Copilot | `~/.github-copilot/` | `instructions.md` |
| 7 | `~/.config/opencode/` | OpenCode | `~/.config/opencode/` | `AGENTS.md` |
| 8 | none | Unknown | `~/.workflow/` | `WORKFLOW.md` |

```text
[AGENT DETECTED]
agent: <nama> | AGENT_DIR: <path> | CONFIG_FILE: <path> | confidence: high|medium|low
```
Resolve semua `{AGENT_DIR}`/`{CONFIG_FILE}` ke nilai nyata sebelum tulis. Unknown → tanya "Pakai `~/.workflow/`? (yes/no)".

---

## STEP 1 — Prereq bootstrap

Tool `agent-workflow` butuh path ke `main.py` untuk **init pertama**. Setelahnya `.workflow/config.json` simpan path absolut → `$AGENT_PATH` tak wajib lagi.

- Cek `AGENT_PATH` (Windows `$env:AGENT_PATH` / POSIX `echo $AGENT_PATH`).
- Set → `[PREREQ] OK: <path>`, lanjut.
- Belum set → tawarkan set (`SetEnvironmentVariable`/`export`), atau jalankan `python <path>/main.py --command init --work-dir <project>` manual sekali. Lanjut? (yes/no).

---

## STEP 2 — Idempotency check

`{AGENT_DIR}/skills/` ada? Marker `<!-- WORKFLOW-MAIN-AGENT:START -->` di `{CONFIG_FILE}`?

```text
[SETUP STATUS] mode: fresh | update | skills_found: <list|none> | config_marker: found|not found
```
mode=update → "Setup ditemukan. UPDATE: skill overwrite, memory dipertahankan, config di-merge. Lanjut? (yes/no)". fresh → STEP 3.

---

## STEP 3 — Buat/update skill files

Buat `{AGENT_DIR}/skills/`. Skill = template → SELALU overwrite. Substitusi `{AGENT_DIR}` ke nilai nyata.

**Pola bersama semua skill DELEGATED (explore/analyze/sweep/doctor/plan-evidence):**
1 panggilan `run` script. Session otomatis (hook). Hasil `{ok, content, meta, digest}`. `ok:false` → tampilkan `meta.error_type` + `meta.next_action`, ikuti/STOP. Relay `digest`; buka `content` kalau butuh detail.

---

### FILE: {AGENT_DIR}/skills/explore.md

    # Skill: explore
    description: Codebase evidence via second_agent (1-call). Fallback: /.local.

    ## Trigger
    /.explore <hint>

    ## Run (1-call)
    Windows:   & "<work_dir>\.workflow\run.ps1" explore "<hint>" "<MAIN_SESSION_ID>"
    mac/linux: "<work_dir>/.workflow/run.sh" explore "<hint>" "<MAIN_SESSION_ID>"
    - <MAIN_SESSION_ID> = nilai dari blok [SESSION BINDING]. WAJIB diteruskan (arg ke-3) — concurrent same-project butuh isolasi per-session. Absent → run script fallback (single-agent OK).
    - Blocking sampai selesai. Return JSON {ok, content, meta, digest}.
    - Tak karang command, tak check.py, tak AGENT_PATH.
    - .workflow belum ada / run script hilang → /.init dulu.
    - GAGAL (ok:false | invalid_evidence | content menu/refusal, no [EVIDENCE]/[DIGEST]) → HARD GATE:
      STOP → output "[PROXY GAGAL] <alasan>. Lanjut /.local? (yes/no)" → TUNGGU user. JANGAN auto-fallback.

    ## Output (RELAY mode)
    digest ada → relay: summary, key_findings, risk_level, recommended_next_action, confidence.
    digest absen (fallback) → [EXPLORATION RESULT] penuh dari content:
      source | session | confidence | entry_points | ownership_hints | related_modules | uncertainties
      (tiap field kosong → tampilkan + alasan). Butuh detail → buka content.

    ## End
    "Lanjut /.plan, atau cukup?"

---

### FILE: {AGENT_DIR}/skills/plan.md

    # Skill: plan
    description: Structured planning — evidence (1-call) + reasoning main_agent. Atribusi klaim + decision gate mekanis.

    ## Trigger
    /.plan <task>

    ## STEP 1 — Evidence
    Reuse LAST_EXPLORE_RESULT jika ada di context. Else 1-call:
      Windows:   & "<work_dir>\.workflow\run.ps1" plan "<task>" "<MAIN_SESSION_ID>"
      mac/linux: "<work_dir>/.workflow/run.sh" plan "<task>" "<MAIN_SESSION_ID>"
    <MAIN_SESSION_ID> dari [SESSION BINDING], WAJIB arg ke-3 (isolasi concurrent).
    - GAGAL (ok:false | invalid_evidence | content menu/refusal) → HARD GATE:
      STOP → "[PROXY GAGAL] <alasan>. Lanjut plan via /.local atau tanpa evidence? (yes/no)" → TUNGGU. JANGAN auto-fallback.
    - [LOCAL_MODE]=true → skip run, pakai /.local flow sebagai evidence.
    - Proxy scope-bounded ke file yg kamu sebut. Lintas-sistem (saldo, UX, perf, security) TAK dilihat proxy kecuali kamu inject ke task. Inject eksplisit ATAU tandai not_investigated. Tugasmu sambung, bukan proxy.
    - Instruksikan proxy trace REVERSE-dep (siapa consume/panggil target perubahan) → `dependents`. Tiap fitur/modul lain yg terdampak WAJIB masuk `risks` dgn [proxy:file:line] bukti coupling.
    - Task nyentuh library/framework eksternal → SEBUT nama library di task; proxy WAJIB baca docs via context7 DULU (versi + API resmi) → temuan di `external`. Jangan biar API library dari tebakan masuk plan.

    ## STEP 2 — Output [PLAN]
    TIAP klaim di assumptions/steps/dependencies/risks WAJIB atribusi sumber:
      [proxy:file:line] berbukti | [main_agent-inference] simpulanmu | [user-provided] | [PLACEHOLDER-perlu-kalibrasi] angka/metrik tanpa basis.
    DILARANG sajikan tebakan (angka, dependency, regresi) sebagai fakta tak berlabel. Belum ada evidence → minta evidence baru ATAU label. Jangan naikkan kepercayaan diam-diam saat didorong.

    [PLAN]
    task:            <restatement>
    evidence_source: second_agent (1-call) | graphify+claude (local) | none
    assumptions:     - <statement + atribusi> | (tidak ada: alasan)
    open_questions:  - question: <N>. <keputusan arch/impl yg HANYA user bisa putus; BLOCKING> | <opsi A> :: <deskripsi A> | <opsi B> :: <deskripsi B>   | (tidak ada: alasan)
                     Bernomor, opsi dipisah " | ", deskripsi opsional setelah " :: ". Jawabannya memang pilihan → opsi WAJIB.
                     Sajikan lewat pertanyaan interaktif, satu per pertanyaan — jangan paksa user membaca struktur mentah.
    resolvable_uncertainties: - uncertainty: <N>. <bisa ditutup> → cara: <read/grep/explore apa> | (tidak ada)
                     NON-blocking. JANGAN tanyakan ke user — nyatakan asumsi, lanjut.
    steps:           1. <concrete + atribusi> 2. ...
    dependencies:    - A→B [bukti:file:line] | A→B [ASUMSI-belum-verified] | (tidak ada)
    files_affected:  <list>
    risks:           - <breakage/side-effect + fitur lain terdampak (blast radius dari dependents) + atribusi> | (tidak ada: alasan)
    confidence:
      problem_understanding: low|medium|high — <alasan>
      root_cause:            low|medium|high — <alasan>
      solution_path:         low|medium|high — <alasan>
    decision:        proceed | clarify | re-explore
      MEKANIS: open_questions ada ATAU solution_path<high ATAU jalur kritis berat [main_agent-inference] → clarify (DILARANG proceed/tawar execute). root_cause rendah → re-explore. Selain itu → proceed.

    ## STEP 3
    resolvable_uncertainties WAJIB kamu coba tutup DULU sebelum tanya user; sisakan open_questions saja ke user.
    decision=proceed → "Setuju? Jalankan /.execute -y". clarify → tanya open_questions. JANGAN auto-execute.

---

### FILE: {AGENT_DIR}/skills/analyze.md

    # Skill: analyze
    description: Deep analysis via second_agent (1-call). --local: Claude only.

    ## Trigger
    /.analyze <topic>          → 1-call
    /.analyze --local <topic>  → Claude langsung (skip proxy)

    ## Run (1-call)
    Windows:   & "<work_dir>\.workflow\run.ps1" analyze "<topic>" "<MAIN_SESSION_ID>"
    mac/linux: "<work_dir>/.workflow/run.sh" analyze "<topic>" "<MAIN_SESSION_ID>"
    <MAIN_SESSION_ID> dari [SESSION BINDING], WAJIB arg ke-3 (isolasi concurrent). Reuse LAST_EXPLORE_RESULT jika relevan.
    Task nyentuh library eksternal → sebut nama library; proxy baca context7 docs dulu → temuan di external (bukan tebakan API).
    GAGAL (ok:false | invalid_evidence | content menu/refusal) → HARD GATE:
      STOP → "[PROXY GAGAL] <alasan>. Lanjut /.local? (yes/no)" → TUNGGU user. JANGAN auto-fallback, JANGAN reasoning dari garbage.
    --local atau [LOCAL_MODE]=true → skip run, /.local flow (bukan fallback diam-diam — mode eksplisit user).

    ## Output [ANALYSIS RESULT]
    Relay digest + isi dari content. confidence (3 sub) + uncertainties WAJIB.
    source: second_agent (1-call) | claude (local)
    confidence: { problem_understanding, root_cause, solution_path } — masing low|medium|high — <alasan>
    findings: <dari content, atribusi grounded/assumption> | (kosong: alasan)
    implications: <dampak> | (kosong: alasan)
    impacted_features: <fitur/modul lain terdampak — dari dependents/reverse-dep> [file:line] | (tidak ada: alasan)
    uncertainties: <tak terkonfirmasi> | (tidak ada)

    ## Rules: zero code changes, zero file mods.

---

### FILE: {AGENT_DIR}/skills/sweep.md

    # Skill: sweep
    description: Git diff scan → impact evidence (1-call). Fallback: git diff langsung.

    ## Trigger
    /.sweep

    ## Run (1-call)
    Windows:   & "<work_dir>\.workflow\run.ps1" sweep "scan git diff, identify impact" "<MAIN_SESSION_ID>"
    mac/linux: "<work_dir>/.workflow/run.sh" sweep "scan git diff, identify impact" "<MAIN_SESSION_ID>"
    <MAIN_SESSION_ID> dari [SESSION BINDING], WAJIB arg ke-3 (isolasi concurrent).
    ok:false / run script hilang → fallback: `git diff HEAD`, `git status` langsung, source: claude (direct).

    ## Output [SWEEP RESULT]
    Relay digest. changed_files | impact | risks | uncertainties (kosong → alasan).

    ## End
    "Impact selesai. Lanjut /.verify atau /.plan?"

---

### FILE: {AGENT_DIR}/skills/doctor.md

    # Skill: doctor
    description: .workflow readiness check. 1-call bila .workflow ada, else local check. Local jangan gagal.

    ## Trigger
    /.doctor

    ## STEP 1 — Bootstrap check
    - .workflow/run.ps1|sh ADA → 1-call:
        Windows:   & "<work_dir>\.workflow\run.ps1" doctor "check .workflow readiness"
        mac/linux: "<work_dir>/.workflow/run.sh" doctor "check .workflow readiness"
    - .workflow belum ada → STEP 2 (local check). JANGAN gagal, JANGAN simpulkan package missing.

    ## STEP 2 — Local check (fallback, cek langsung)
    .workflow/          : EXISTS | MISSING
    .workflow/run.*     : EXISTS | MISSING
    .gitignore          : CONTAINS .workflow/ | MISSING
    $AGENT_PATH         : SET (<path>, exists) | NOT SET
    .workflow/config.json : v3.3.1 (main_py_path set) | old | MISSING
    graphify-out/       : EXISTS | MISSING
    second_agent MCP    : SAFE | RISK (<server>) | REVIEW (<server>) | NONE — scan opencode config mcp (context7=safe read-only; write/exec/fs/db/browser=risk)

    ## Output
    [DOCTOR REPORT]
    source: second_agent (1-call) | claude (local)
    checks: <semua item STEP 2 + status>
    mcp_second_agent: <verdict + daftar server + classification> — RISK/REVIEW = second_agent lampaui read-only, WAJIB tampil + alasan
    status: READY | NEEDS SETUP
    actions: <fix per item MISSING/NOT SET + disable/confirm MCP risky> (kosong → "tidak ada — semua OK")
    NEEDS SETUP → "Jalankan /.init". $AGENT_PATH NOT SET → set dulu (lihat /.init STEP 1).

---

### FILE: {AGENT_DIR}/skills/init.md

    # Skill: init
    description: Buat/regenerate .workflow/ workspace. Local. Bootstrap dari $AGENT_PATH (repo agent-workflow).

    ## Trigger
    /.init

    ## STEP 1 — Resolve bootstrap source (WAJIB — urutan ini, JANGAN dilewati)
    PENTING: main.py TIDAK ada di project. Ada di repo agent-workflow. Pointer utama = $AGENT_PATH.
    Resolve berurutan:
    1. Cek $AGENT_PATH — Windows: `$env:AGENT_PATH` | POSIX: `echo $AGENT_PATH`.
       Berisi path + file exists → INI SUMBER. Lanjut STEP 2.
    2. Kosong tapi .workflow/config.json ada → baca runtime.main_py_path.
    3. Masih tak ada → tanya user path repo agent-workflow, ATAU minta set:
       Windows: [Environment]::SetEnvironmentVariable("AGENT_PATH","<repo>\main.py","User")
       POSIX:   export AGENT_PATH="<repo>/main.py"
    JANGAN simpulkan "package missing / chicken-egg" sebelum cek $AGENT_PATH.
    JANGAN hunt main.py di project/global/pip/npm — bukan package, ini git repo via $AGENT_PATH.

    ## STEP 2 — Run init
    work_dir = absolute path project aktif.
    Windows: python "$env:AGENT_PATH" --command init --work-dir "<work_dir>" --pretty
    POSIX:   python3 "$AGENT_PATH" --command init --work-dir "<work_dir>" --pretty
    init otomatis: generate scripts (run/inspect/check) + config abs-path + copy opencode.json + sessions/ scaffold + .gitignore (.workflow/). state/scope/cache/logs/runtime = per-session, dibuat lazy saat delegated call pertama (BUKAN di root).

    ## Output
    [INIT]
    bootstrap: $AGENT_PATH = <path>
    generated: run/inspect/check.{ps1,sh} + config.json (v3.3.1, main_py_path abs) + opencode.json (copy) + sessions/ (state/scope/cache/logs/runtime per-session, lazy)
    gitignore: .workflow/ ok
    status: READY
    ".workflow siap. Coba /.explore atau /.doctor."

---

### FILE: {AGENT_DIR}/skills/execute.md

    # Skill: execute
    description: Controlled implementation dengan approval gate.

    ## Trigger
    /.execute -y → PROCEED | /.execute → GATE only

    ## Gate
    Tanpa -y → output [EXECUTION SCOPE] → "Tambah -y untuk konfirmasi" → STOP.

    ## Pre-Execution
    [EXECUTION SCOPE] allowed: <files> | forbidden: <files> | reason: <batasan>

    ## During
    ONLY sentuh allowed. Butuh forbidden → STOP → report conflict → minta instruksi.

    ## Post (dibaca dari .workflow/config.json → commands.auto_verify_after_execute)
    [EXECUTION RESULT] files_changed | confidence | uncertainties | verification | status
    `true`  → auto-trigger /.verify. status: done|partial|blocked. JANGAN declare done sebelum verify selesai.
    `false` (default) → JANGAN auto-jalankan /.verify (hindari test berat tak diminta). WAJIB:
      verification: not_run
      status: implemented | partial | blocked   ← DILARANG pakai "done"
      lalu tawarkan "/.verify sekarang?"
    "implemented" ≠ "done". Tanpa verifikasi kamu TAK TAHU ini bekerja — jangan bilang tahu.
    Key ini prompt-only: runtime Python nol jalur untuk /.execute, jadi tak ada yang menegakkan
    selain kamu sendiri.

---

### FILE: {AGENT_DIR}/skills/verify.md

    # Skill: verify
    description: 3-step verification — logic, falsification, reality. Kedalaman diatur commands.verify_mode.

    ## Trigger
    /.verify (auto setelah /.execute -y atau /.refactor)

    ## Mode (dibaca runtime dari .workflow/config.json → commands.verify_mode)
    - `delegated` (default) → verifikasi penuh oleh second_agent. Protocol 3-step di bawah.
    - `syntax` → QUICK. Runtime jalankan syntax/name check lokal atas file berubah
      (`git diff HEAD` + untracked). NOL test suite, NOL panggilan second_agent.
      Output `[QUICK VERIFY]` sudah final — JANGAN dilebarkan jadi klaim runtime.
      verdict quick `pass` berarti **file parse**, BUKAN fitur bekerja. Sebut batas ini.
      `not_checked`/`skipped` WAJIB direlay apa adanya — bahasa tanpa checker & toolchain
      absen bukan pass.

    ## Protocol (verify_mode=delegated)
    1. Logic: solve problem? assumptions valid? konsisten pola codebase? → PASS/FAIL + reason
    2. Falsification: kondisi gagal? edge case? malformed input? → list
    3. Reality: test suite → run → simulate → "not executable". Actual vs expected.

    ## Severity + origin + scope gate (verify_mode=delegated — WAJIB)
    Runtime kirim kontrak ke second_agent. TIAP temuan WAJIB bawa TIGA tag:
      severity:       critical | high | medium | low
      origin:         introduced | regression | pre_existing | unknown
      scope_relation: in_scope | out_of_scope

      critical = data loss | lubang security | hasil salah diam-diam | semua command rusak
      high     = jalur normal fitur rusak | caller existing regresi | kontrak dilanggar
      medium   = edge case | degradasi | defect dgn workaround
      low      = naming/style/doc drift | hipotetis tanpa trigger terbukti

    SEVERITY SENDIRIAN TAK MENENTUKAN BLOCKING. Rute tiap temuan pakai tabel:
      introduced/regression + in_scope     + critical|high → BLOCKING
      introduced/regression + out_of_scope + critical|high → BLOCKING (+ pelanggaran scope)
      introduced/regression + out_of_scope + medium|low    → ESCALATION
      unknown               + apa pun      + critical|high → BLOCKING (fail closed)
      pre_existing          + apa pun      + critical|high → ESCALATION
      selain itu                                          → NOTE

    `unknown` bukan pintu keluar: untuk turun dari unknown WAJIB sebut bukti (diff, git history,
    versi sebelum). Tak bisa → tetap unknown, tetap memblokir.
    ESCALATION tak mengubah verdict, TAPI BUKAN note — itu masalah critical/high nyata yang
    user harus putuskan. DILARANG menyembunyikannya di notes.
    Temuan tanpa file:line + skenario gagal konkret → TAK BOLEH critical/high; turunkan jadi note
    + sebut evidence apa yang kurang. Aturan ini soal MUTU EVIDENCE, bukan alat meredam masalah
    sistemik: defect yang tersebar di banyak tempat TETAP critical/high — kutip file:line perwakilan
    + sebut seberapa luas.
    DILARANG menaikkan sever biar diperhatikan, DILARANG menurunkan biar lolos.

    ## Output
    [VERIFICATION]
    mode: delegated | syntax          ← kamu yang isi; second_agent tak tahu mode (syntax nol lewat dia)
    verdict: DONE | NEEDS FIX   ← NEEDS FIX HANYA bila blocking_findings ada
    blocking_findings: - severity|origin|scope_relation — <problem> [file:line] — trigger — impact — fix | (tidak ada: apa yg dicek bersih)
    escalations: - severity|origin|scope_relation — <problem> [file:line] — kenapa tak memblokir | (tidak ada)
    notes: - severity|origin|scope_relation — <problem> [file:line] | (tidak ada)
    checks_run: <yang benar-benar dijalankan/dibaca + hasil>
    not_verified: <tak bisa dicek + alasan> | (tidak ada)
    confidence: low|medium|high — <alasan>
    NEEDS FIX → fix blocking dulu → re-run /.verify. JANGAN output final sebelum done.
    escalations + notes JANGAN dibuang — tampilkan, biar user yang putuskan digarap sekarang atau nanti.
    Mode syntax → DILARANG verdict DONE untuk masalah runtime/behavior; maksimal "syntax OK,
    behavior belum diverifikasi" + sarankan set verify_mode=delegated bila butuh bukti nyata.

---

### FILE: {AGENT_DIR}/skills/refactor.md

    # Skill: refactor
    description: Structural improvement — zero behavior change.

    ## Trigger
    /.refactor <scope>

    ## Rules
    Struktural ONLY, behavior TIDAK BERUBAH. Jangan expand scope.
    [REFACTOR SCOPE] scope | allowed | forbidden | goal
    Post: `graphify update` → auto-trigger /.verify.

---

### FILE: {AGENT_DIR}/skills/commit.md

    # Skill: commit
    description: Generate commit message (Conventional Commits). Local.

    ## Trigger
    /.commit

    ## Execution
    1. `git status` + `git diff --staged`. Tak ada staged → "[COMMIT] Stage dulu: git add <files>", STOP.
    2. Tentukan type (feat|fix|refactor|chore|docs|test|perf|style|build|ci), scope, subject (≤50, imperative, no period), body (hanya jika why non-obvious).
    3. Output [COMMIT MESSAGE] block. "Jalankan? (yes/no)" → yes: `git commit -m`. JANGAN commit tanpa konfirmasi.

---

### FILE: {AGENT_DIR}/skills/review.md

    # Skill: review
    description: One-line-per-issue code review. Local — no proxy.

    ## Trigger
    /.review <file|diff>

    ## Execution
    Baca target (file/diff). Per issue = satu baris. Tanpa praise, tanpa scope creep.
    Format: path:line: <severity> — <problem>. <fix>.
    severity: 🔴 critical | 🟠 major | 🟡 minor. Skip nit kecuali ubah makna.

    ## Output
    [REVIEW <target>]
    <path:line: severity — problem. fix.> (bersih → "no issues — <alasan>")
    summary: <n> issues (<crit> critical, <major> major, <minor> minor)

---

### FILE: {AGENT_DIR}/skills/compress.md

    # Skill: compress
    description: Compress prose file ke caveman-speak. Preserve substansi teknis. Local.

    ## Trigger
    /.compress <file>

    ## Execution
    Baca file. Compress prose: drop artikel/filler/pleasantries/hedging. Fragments OK.
    PRESERVE exact: code, paths, commands, URLs, angka, heading, technical terms.
    Backup original → <file>.original.md sebelum overwrite.

    ## Output
    [COMPRESS <file>] before: <bytes> | after: <bytes> | saved: <pct> | backup: <file>.original.md
    "Confirm overwrite? (yes/no)"

---

### FILE: {AGENT_DIR}/skills/memory.md

    # Skill: memory
    description: Propose memory update ke personal knowledge files.

    ## Trigger
    /.memory <note>

    ## Execution
    1. Evaluasi: berdampak keputusan masa depan? ownership/arch baru? recurring landmine?
    2. [MEMORY PROPOSAL] file | action (add|update|overwrite) | content. "Confirm? (yes/no/edit)"
    3. yes → write + update {AGENT_DIR}/memory/MEMORY.md index. no → discard. edit → tunggu koreksi.
    4. Append SESSION_LOG.md: [tanggal] task | domain | memory written.
    JANGAN write memory mid-session tanpa konfirmasi.

---

### FILE: {AGENT_DIR}/skills/help.md

    # Skill: help
    description: Command reference v3.3.1

    ## Trigger
    /.help

    ## Output
    [COMMAND GUIDE — v3.3.1]

    LOCAL (main_agent langsung):
      /.execute -y      implement code (wajib -y)
      /.init            buat/regenerate .workflow/ (scripts, opencode.json, config abs-path)
      /.refactor <s>    structural, zero behavior change
      /.commit          commit message (Conventional Commits)
      /.review <f>      one-line per issue review
      /.compress <f>    compress prose ke caveman
      /.memory <note>   simpan insight
      /.caveman [lite|full|ultra]  toggle compression
      /.local [on|off|status]      toggle no-proxy
      /.help            panduan ini

    DELEGATED (1-call .workflow/run script → second_agent):
      /.explore <hint>  evidence gathering
      /.plan <task>     evidence + rencana terstruktur
      /.analyze <topic> deep analysis | --local: Claude only
      /.verify          3-step verification (auto setelah /.execute)
      /.sweep           git diff impact
      /.doctor          .workflow readiness

    [WORKFLOW] /.explore → /.plan → /.execute -y → /.verify
    [SESSION CACHE] LAST_EXPLORE_RESULT → /.plan,/.analyze | LAST_PLAN_RESULT → /.execute | LAST_EXECUTE_DIFF → /.verify,/.sweep
    Prefix "/." wajib. Tanpa prefix → INVALID.

---

### FILE: {AGENT_DIR}/skills/caveman.md

    # Skill: caveman
    description: Token compression — default ultra untuk respons non-code.

    ## Status
    ALWAYS ON sejak pesan pertama. Off: "normal mode" | "stop caveman".

    ## Rules
    Drop artikel/filler/pleasantries/hedging. Fragments OK, synonyms pendek.
    Pattern: [thing] [action] [reason]. [next step].
    Code/paths/commands/file names TIDAK BERUBAH. Structured block labels TETAP.
    Levels: ultra (default) | full | lite | normal.

---

### FILE: {AGENT_DIR}/skills/local.md

    # Skill: local
    description: Toggle no-proxy. Claude mirror second_agent via graphify + Read/Glob/Grep. Affects /.explore /.plan /.analyze.

    ## Trigger
    /.local [on|off|status] (tanpa arg = toggle)

    ## State
    [LOCAL_MODE] = true (no-proxy, graphify-mirrored) | false (default, 1-call proxy). Reset false tiap session baru.

    ## Graphify-Mirrored Protocol ([LOCAL_MODE]=true, untuk explore/plan/analyze)
    1. Load structure: graphify-out/ (graph.json/nodes/edges) atau Glob("**/*") fallback.
    2. Scope: filter nodes relevan, shortlist max 10 file (entry points → callers → deps).
    3. Deep dive: Read + Grep per file, trace dep penting, stop saat confidence cukup.
    4. Output IDENTIK format skill terkait (source: graphify+claude (local)) agar interop /.plan.
    Read/Glob/Grep DIIZINKAN saat local mode (exception Global Forbidden).

    ## Output toggle
    [LOCAL MODE — ON|OFF] Proxy: off|on | Coverage: /.explore /.plan /.analyze | Graphify: active|glob

    ## Rules
    Zero code/file changes. /.execute & /.memory tak terpengaruh.

---

## STEP 4 — Memory files

Buat `{AGENT_DIR}/memory/`. Memory = data user → JANGAN overwrite jika ada.

- `PERSONAL_MEMORY.md` (SKIP jika ada): Architecture Decisions, Module Ownership, Known Landmines, Patterns, Things I Forget.
- `DOMAIN_MAP.md` (SKIP jika ada): Entry Points, Cross-Team Boundaries, Dead Code Suspects.
- `SESSION_LOG.md` (SKIP jika ada): log per session.
- `MEMORY.md` (UPDATE index, append jika belum ada):
    - [Personal Memory](PERSONAL_MEMORY.md) — arch decisions, ownership, landmines
    - [Domain Map](DOMAIN_MAP.md) — entry points, boundaries, dead code
    - [Session Log](SESSION_LOG.md) — aktivitas per session

---

## STEP 5 — Tulis/merge config file (MANAGED BLOCK — dikirim tiap turn, jaga ramping)

Target `{CONFIG_FILE}`. Marker ada → ganti antara START/END. Tidak ada → append. Substitusi `{AGENT_DIR}`.

    <!-- WORKFLOW-MAIN-AGENT:START — v3.3.1, do not edit manually -->

    ## Workflow Main Agent — v3.3.1

    role: orchestrator + user interface + direct executor. Kamu BUKAN second_agent.
    second_agent: OpenCode (read-only evidence), dipanggil via .workflow/run script.

    ### Identity & Behavior
    - Interface user↔agent. Route perintah, delegasi evidence, synthesize, eksekusi aksi write.
    - Concise. Direct. Single user. Never assume, never expand scope silently.
    - Caveman ultra DEFAULT dari pesan pertama (off: "normal mode"). Code/paths exact.
    - WAJIB output hasil setelah evidence. Tidak boleh diam.
    - Task ambigu → suggest /.explore. Task jelas → jawab langsung.

    ### Output Contract (NON-NEGOTIABLE — SEMUA skill)
    Output SELALU ikut format skill terkait — kontrak, bukan suggestion.
    Field wajib SELALU tampil; kosong/tak tersedia → tetap tampilkan + tulis alasan. Jangan hapus/lewati.
    Dua mode (jangan campur):
    - RELAY (explore/sweep/doctor): relay `digest`; digest absen → isi format skill penuh dari `content`. Jangan karang di luar evidence.
    - SYNTHESIS (plan/analyze): main_agent REASONING sendiri → isi [PLAN]/[ANALYSIS RESULT] penuh dari evidence+digest. confidence (3 sub) + uncertainties WAJIB. "Jangan rebuild" TIDAK berlaku di sini — ini memang output main_agent.
    Violasi = output incomplete.

    ### Command Validation (STRICT)
    Hanya prefix "/." valid. Tanpa "/." → jangan interpret/auto-correct/fallback. Output EXACT:
    [INVALID COMMAND] / Gunakan prefix "/." / Contoh: /.plan / STOP.

    ### Session (satu otoritas)
    MAIN_SESSION_ID dari blok [SESSION BINDING] hook (STEP 5b) — AUTHORITATIVE, override semua.
    WAJIB teruskan nilainya ke run script (arg ke-3) tiap delegated call — hook taruh id di context, run script baca dari arg; tanpa diteruskan jatuh ke "default" (fatal untuk concurrent same-project).
    Hook absent → generate main_<slug>_<ts_ms>_<pid> (state per-session di sessions/<id>/, nol root state.json untuk fallback).
    Jangan reuse session lintas project root. Detail lifecycle: skill/hook, bukan sini.

    ### Delegated commands — 1-call (NON-NEGOTIABLE)
    Panggil: .workflow/run.ps1 (Windows) | .workflow/run.sh (mac/linux) <command> "<task>" "<MAIN_SESSION_ID>".
    - <MAIN_SESSION_ID> = nilai [SESSION BINDING], WAJIB diteruskan arg ke-3 tiap explore/plan/analyze/verify/sweep. Tanpa ini, 2 main agent di project sama collapse ke sesi "default" yang sama (job saling block, state saling timpa). doctor/init/clean/inspect = direct, tak butuh session.
    - Blocking, return {ok, content, meta, digest}. Tak karang command, tak $AGENT_PATH. Normal path tak perlu check.py (kecuali recovery attach di bawah).
    - Output ikut Output Contract (dua mode): explore/sweep/doctor = RELAY digest; plan/analyze = SYNTHESIS penuh. Buka `content` bila butuh detail.
    - Panggilan TERPUTUS (tool timeout / no JSON / mau re-run) → JANGAN langsung re-run (worker detached lanjut; job yg sudah selesai TAK auto-ke-ambil). Recovery WAJIB otomatis: /.inspect dulu → (a) job running + cmd sama → attach `.workflow/check.<ps1|sh> <job_id> --wait --result` (nol run baru); (b) job baru selesai → baca `.workflow/sessions/<MAIN_SESSION_ID>/runtime/response.last.md`; (c) nihil → baru re-run.
    - .workflow/run script hilang → /.init (bootstrap $AGENT_PATH).
    - `/.verify` kedalamannya diatur `commands.verify_mode` (`delegated`|`syntax`). `syntax` → runtime balas `[QUICK VERIFY]` (check parse lokal, nol test, nol second_agent). Relay apa adanya + sebut batasnya: parse OK ≠ behavior terbukti. `not_checked`/`skipped` JANGAN dihitung pass. `commands.auto_verify_after_execute` mengatur apakah `/.execute` memanggil verify sendiri — `false` → status `implemented`, `verification: not_run`, DILARANG bilang "done".

    ### Proxy failure (HARD GATE — JANGAN auto-fallback)
    Proxy dianggap GAGAL jika: ok:false | error_type=invalid_evidence/empty_output/session_capture_failed | content bukan evidence (menu/pertanyaan/refusal, tak ada [EVIDENCE]/[DIGEST]).
    Saat gagal → WAJIB:
    1. STOP. JANGAN lanjut synthesis. JANGAN gather evidence sendiri diam-diam.
    2. Output EXACT peringatan:
       [PROXY GAGAL] <error_type/alasan singkat>. next_action: <meta.next_action jika ada>.
       Lanjut /.local (evidence lokal via graphify+Read/Grep)? (yes/no)
    3. TUNGGU input user. yes → /.local flow. no → STOP.
    Auto-fallback ke local tanpa tanya user = DILARANG.

    ### Command registry
    LOCAL:     /.execute -y /.init /.refactor /.commit /.review /.compress /.memory /.caveman /.local /.help
    DELEGATED: /.explore /.plan /.analyze /.verify /.sweep /.doctor
    NL map: cek logic→analyze | flow→explore | tambah fitur→plan | implement→execute -y | impact→sweep | readiness→doctor | catat→memory | tanpa proxy→local on.
    Prefix "/." wajib. Command tanpa "/." → INVALID, jangan interpret.

    ### Plan/analysis output (structured)
    WAJIB: confidence {problem_understanding, root_cause, solution_path} (low|medium|high — alasan).
    Pisah open_questions (keputusan-user, BLOCKING) vs resolvable_uncertainties (kamu tutup dulu). Jangan campur — nyampur = geser bebanmu ke user.
    Atribusi: TIAP klaim beri sumber [proxy:file:line]|[main_agent-inference]|[user-provided]|[PLACEHOLDER]. Field kosong → tampilkan + alasan. Bangun dari digest+content.
    Anti-spekulasi: DILARANG masukkan angka/dependency/regresi absen-evidence sebagai fakta. Didorong user ≠ izin ngarang; label [main_agent-inference] atau minta evidence. dependency palsu ubah urutan kerja — tunjukkan bukti coupling atau tandai [ASUMSI].
    Relay-tag: teruskan tag grounded/assumption dari proxy apa adanya; JANGAN re-summarize sampai hilang bedanya (tiap ringkas = lossy).

    ### Execution rules
    /.execute -y: ada plan aktif (LAST_PLAN_RESULT) → edit HANYA execution scope → auto /.verify → jangan declare done sebelum verify. Jangan commit kecuali user minta.
    /.init: bootstrap dari $AGENT_PATH (main.py di repo agent-workflow, BUKAN di project/pip/npm). `python "$env:AGENT_PATH" --command init --work-dir <root>`. $AGENT_PATH kosong → minta set dulu (lihat skill init). Regenerate scripts+config+opencode.json. Cek $AGENT_PATH SEBELUM simpul "package missing".

    ### Session cache (valid dalam MAIN_SESSION_ID + project root sama)
    LAST_EXPLORE_RESULT→plan,analyze | LAST_PLAN_RESULT→execute | LAST_EXECUTE_DIFF→verify,sweep | LAST_SWEEP_RESULT→context.

    ### Graphify
    Cek graphify-out/ sebelum codebase task. Ada → primary context. Tidak ada → offer generate .graphifyignore + `graphify update`.
    .graphifyignore framework-aware (ignore deps/build/secret): node_modules/ vendor/ .venv/ venv/ __pycache__/ target/ dist/ build/ .next/ coverage/ *.log .env .env.*
    Never run: graphify init/build/watch. Auto `graphify update` setelah code change. Error "too large"/"too many nodes" → IGNORE, jangan retry.

    ### Global Forbidden
    Modif file luar scope | /.execute tanpa -y | plan tanpa confidence+atribusi | auto-expand scope |
    sajikan angka/dependency/regresi tebakan sebagai fakta tak berlabel | naikkan kepercayaan diam-diam saat didorong | campur open_questions dgn resolvable_uncertainties |
    proceed/tawar-execute saat solution_path<high atau open_questions ada |
    claim success sebelum verify | lanjut synthesis saat ok:false ATAU content non-evidence (menu/refusal) |
    auto-fallback ke /.local tanpa tanya+tunggu user saat proxy gagal | delegate /.execute atau /.init ke second_agent |
    reuse session lintas project | interpret "/" tanpa "." | write memory mid-session tanpa konfirmasi | ignore [LOCAL_MODE] |
    plan/analyze tanpa evidence saat [LOCAL_MODE]=false (kecuali user setuju) | simpul bootstrap gagal / "package missing" sebelum cek $AGENT_PATH.

    <!-- WORKFLOW-MAIN-AGENT:END -->

---

## STEP 5b — Session-binding hook (Claude Code only)

HANYA jika agent (STEP 0) = Claude Code. Agent lain → SKIP, output:
"[SESSION HOOK] Agent <nama> belum punya padanan SessionStart hook. Fallback: state.json + context."

### 5b.1 — Buat `{AGENT_DIR}/hooks/session-bind.ps1` (Windows — overwrite)

    # session-bind.ps1 - SessionStart hook
    # Maps Claude Code session lifecycle -> second_agent (opencode) MAIN_SESSION_ID.
    #
    # source mapping (user decision):
    #   startup | clear | compact  -> NEW  MAIN_SESSION_ID  -> second_agent thread NEW
    #   resume                     -> REUSE MAIN_SESSION_ID  -> second_agent thread CONTINUE
    #
    # Registry: %USERPROFILE%\.claude\session_registry.json  (key = claude session_id)
    # Output: JSON hookSpecificOutput.additionalContext -> injects MAIN_SESSION_ID into context.
    # Never blocks session start (always exit 0).

    $ErrorActionPreference = 'Stop'

    function Write-NoBom([string]$Path, [string]$Content) {
        $enc = New-Object System.Text.UTF8Encoding($false)
        [System.IO.File]::WriteAllText($Path, $Content, $enc)
    }

    try {
        $raw = [Console]::In.ReadToEnd()
        if ([string]::IsNullOrWhiteSpace($raw)) { exit 0 }

        $payload   = $raw | ConvertFrom-Json
        $source    = $payload.source
        $claudeSid = $payload.session_id
        $cwd       = $payload.cwd
        if ([string]::IsNullOrWhiteSpace($cwd)) { $cwd = (Get-Location).Path }

        $root = $cwd
        try { $rp = Resolve-Path -LiteralPath $cwd -ErrorAction Stop; $root = $rp.Path } catch { }
        $slug = Split-Path -Leaf $root

        $registryPath = Join-Path $env:USERPROFILE '.claude\session_registry.json'

        # load registry
        $registry = @{}
        if (Test-Path -LiteralPath $registryPath) {
            try {
                $j = Get-Content -LiteralPath $registryPath -Raw | ConvertFrom-Json
                foreach ($p in $j.PSObject.Properties) { $registry[$p.Name] = $p.Value }
            } catch { $registry = @{} }
        }

        # decide reuse vs new
        $reuse  = $false
        $mainId = $null
        if ($source -eq 'resume' -and $claudeSid -and $registry.ContainsKey($claudeSid)) {
            $mainId = $registry[$claudeSid].main_session_id
            $reuse  = $true
        }
        if ([string]::IsNullOrWhiteSpace($mainId)) {
            $ts     = Get-Date -Format 'yyyyMMdd_HHmmssfff'   # ms-resolution avoids same-second collision
            $rand   = -join (((48..57) + (97..102)) | Get-Random -Count 4 | ForEach-Object { [char]$_ })
            $mainId = "main_${slug}_${ts}_${rand}"
            $reuse  = $false
        }

        $boundAt = (Get-Date).ToUniversalTime().ToString('o')
        if ($claudeSid) {
            $registry[$claudeSid] = [PSCustomObject]@{
                main_session_id = $mainId
                cwd             = $root
                bound_at        = $boundAt
                source          = $source
            }
        }

        # prune to newest 50 by bound_at
        try {
            $rows = foreach ($k in $registry.Keys) { [PSCustomObject]@{ key = $k; val = $registry[$k] } }
            $kept = $rows | Sort-Object { try { [datetime]$_.val.bound_at } catch { [datetime]::MinValue } } -Descending |
                    Select-Object -First 50
            $pruned = @{}
            foreach ($e in $kept) { $pruned[$e.key] = $e.val }
            $registry = $pruned
        } catch { }

        Write-NoBom $registryPath (($registry | ConvertTo-Json -Depth 6))

        $verb = if ($reuse) { 'REUSE (continue)' } else { 'NEW' }
        $ctx  = @"
    [SESSION BINDING - authoritative]
    MAIN_SESSION_ID=$mainId
    MAIN_SESSION_PROJECT_ROOT=$root
    source=$source
    second_agent_thread=$verb
    Use this MAIN_SESSION_ID for all /.explore /.plan /.analyze /.verify /.sweep invocations. Overrides .workflow/state.json session.id.
    "@

        $out = [PSCustomObject]@{
            hookSpecificOutput = [PSCustomObject]@{
                hookEventName     = 'SessionStart'
                additionalContext = $ctx
            }
        }
        Write-Output ($out | ConvertTo-Json -Depth 5 -Compress)
        exit 0
    }
    catch {
        # never block session start
        exit 0
    }

> Saat tulis ke file: hapus indentasi 4-spasi. (Indentasi di prompt = penanda code block.)

**POSIX (mac/linux) — `{AGENT_DIR}/hooks/session-bind.sh`** (WAJIB bila agent jalan di mac/linux — tanpa ini MAIN_SESSION_ID tak sampai ke context → concurrent same-project rusak). Paritas logika .ps1: NEW pada startup|clear|compact, REUSE pada resume.

    #!/usr/bin/env bash
    # session-bind.sh — SessionStart hook (POSIX parity). Inject MAIN_SESSION_ID. Never blocks (exit 0).
    raw="$(cat)"; [ -z "$raw" ] && exit 0
    val(){ printf '%s' "$raw" | sed -n "s/.*\"$1\"[[:space:]]*:[[:space:]]*\"\([^\"]*\)\".*/\1/p" | head -n1; }
    source="$(val source)"; sid="$(val session_id)"; cwd="$(val cwd)"; [ -z "$cwd" ] && cwd="$PWD"
    root="$cwd"; slug="$(basename "$root")"
    regdir="$HOME/.claude/session_registry"; mkdir -p "$regdir" 2>/dev/null
    safe_sid="$(printf '%s' "${sid:-none}" | tr -c 'A-Za-z0-9_.-' '_')"; regfile="$regdir/$safe_sid"
    mid=""; verb="NEW"
    if [ "$source" = "resume" ] && [ -n "${sid:-}" ] && [ -f "$regfile" ]; then mid="$(cat "$regfile" 2>/dev/null)"; verb="REUSE (continue)"; fi
    if [ -z "$mid" ]; then
      ts="$(date -u +%Y%m%d_%H%M%S)"; rnd="$(head -c4 /dev/urandom 2>/dev/null | od -An -tx1 | tr -d ' \n')"; [ -z "$rnd" ] && rnd="$$"
      mid="main_${slug}_${ts}_${rnd}"; verb="NEW"
    fi
    [ -n "${sid:-}" ] && printf '%s' "$mid" > "$regfile" 2>/dev/null
    find "$regdir" -type f -mtime +30 -delete 2>/dev/null || true
    ctx="[SESSION BINDING - authoritative]
    MAIN_SESSION_ID=$mid
    MAIN_SESSION_PROJECT_ROOT=$root
    source=$source
    second_agent_thread=$verb
    Use this MAIN_SESSION_ID for all delegated commands. Overrides .workflow/state.json session.id."
    esc="$(printf '%s' "$ctx" | sed 's/\\/\\\\/g; s/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')"
    printf '{"hookSpecificOutput":{"hookEventName":"SessionStart","additionalContext":"%s"}}\n' "$esc"
    exit 0

> Saat tulis ke file: hapus indentasi 4-spasi + `chmod +x`. Entropi = detik + 8-hex urandom → collision-free concurrent (tak pakai `%N`, tak portable di macOS).

### 5b.2 — Register di `{AGENT_DIR}/settings.json` (MERGE — pilih sesuai OS agent)

Windows:

    "hooks": { "SessionStart": [ { "matcher": "startup|resume|clear|compact",
      "hooks": [ { "type": "command", "command": "powershell -NoProfile -ExecutionPolicy Bypass -File \"{AGENT_DIR}\\hooks\\session-bind.ps1\"" } ] } ] }

mac/linux:

    "hooks": { "SessionStart": [ { "matcher": "startup|resume|clear|compact",
      "hooks": [ { "type": "command", "command": "bash \"{AGENT_DIR}/hooks/session-bind.sh\"" } ] } ] }

Catatan: `compact` → thread BARU. autoCompact reset thread mid-session. Reuse: ganti `$source -eq 'resume'` → `$source -in 'resume','compact'`.

---

## STEP 6 — Verifikasi
1. List `{AGENT_DIR}/skills/` + byte size (konfirmasi skill ramping)
2. List `{AGENT_DIR}/memory/` + byte size
3. 5 baris pertama `{CONFIG_FILE}` (marker ada)
4. Byte size managed block (target < ~4KB — jaga ramping)
5. (Claude Code) `session-bind.ps1` ada + `settings.json` punya `hooks.SessionStart`

---

## STEP 7 — Final Report

    [SETUP COMPLETE — v3.3.1 DUAL AGENT MODE]
    agent: <nama> | dir: {AGENT_DIR} | config: {CONFIG_FILE} | mode: fresh|update

    Skills (overwritten, ringan): explore plan analyze sweep doctor init execute verify refactor commit review compress memory help caveman local
    Memory (preserved): PERSONAL_MEMORY DOMAIN_MAP SESSION_LOG MEMORY(index)
    Config: {CONFIG_FILE} (managed block v3.3.1, ramping) | Session hook: session-bind.ps1 (Claude Code) | .sh (POSIX bila didukung)

    Interface: .workflow/run.<ps1|sh> <command> "<task>" → {ok, content, meta, digest}
    Workflow:  /.explore → /.plan → /.execute -y → /.verify
    Status: READY
